# idigna

./: .gitignore  Cargo.toml  README.md
config-and-init/: config.json  idigna.service
src/: config.rs  connection.rs  main.rs  mimetype.rs  request.rs  status.rs  tls.rs
