[package]
name = "idigna"
version = "0.1.0"
authors = ["lyons <hi@klyons.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.7", features = ["attributes"]}
async-tls = {version = "0.10", features = ["server"]}
futures = "0.3"
log = "0.4"
mime_guess = "2.0"
percent-encoding = "2.1"
regex = "1"
rustls = "0.18"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_regex = "1.1"
simple_logger = "1.11"
structopt = "0.3"
url = "2.2"